@@ -51,8 +51,10 @@
 - Fix: handle malformed colspans
 - Fix: handle incorrect nested headers (H1 in output)
 - Fix: handle geo coordinates with missing levels of precision
-- Feature: Add support for Simple English Wikipedia
+- Feature: Added support for Simple English Wikipedia
 - Fix: Added support for new media HTML structure. See: https://www.mediawiki.org/wiki/Parsoid/Parser_Unification/Media_structure/FAQ
 - Fix: Better detection of geohack URLs allowed for more links to be displayed
 - Feature: Better captions on galleries and montages
 - Fix: Crashing on wide unicode in tables
+- Feature: Added download and convert times to footer
+- Feature: Added original and converted size to footer
